--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,13 +33,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Biblioteca_0_3_1
 excludes=
+file.reference.jasperreports-5.6.0.jar=/home/zining/Descargas/iReport-5.6.0/ireport/modules/ext/jasperreports-5.6.0.jar
 file.reference.jdatepicker-2.0.3.jar=../../../Descargas/jdatepicker-2.0.3.jar
-file.reference.mysql-connector-java-8.0.25.jar=../../../mysql-connector-java-8.0.25.jar
+file.reference.mysql-connector-java-8.0.25.jar=/home/zining/mysql-connector-java-8.0.25.jar
+file.reference.mysql-connector-java-8.0.25.jar-1=/home/zining/LibreriasJAva/mysql-connector-java-8.0.25.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.25.jar}:\
-    ${file.reference.jdatepicker-2.0.3.jar}
+    ${file.reference.jdatepicker-2.0.3.jar}:\
+    ${libs.JasperReports.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -52,7 +55,10 @@ javac.source=11
 javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.mysql-connector-java-8.0.25.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.25.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
